--- a/src/Production/LoadingList.css
+++ b/src/Production/LoadingList.css
@@ -6,7 +6,7 @@
     margin: 0px 60px;
     padding: 20px 0px;
     cursor: pointer;
-    height: 100%;
+    height: 110px;
     width: clac(100%-12px);
     text-align: left;
 }
@@ -19,6 +19,10 @@
 .LoadingListCardFooter{
     height: 20px;
     border-top: 1px solid rgb(233, 233, 233);
+}
+
+.LoadingArea{
+    padding-top: 60px;
 }
 
 .ellispis{
